@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.19.7
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fix rebuild stage not rebuilding previews
 ---------------------------------------------------------------------------------------------------
 Version: 0.19.6
 Date: 2023-04-20
